# python-moganclient

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: contributing.rst  index.rst  testing.rst
doc/source/osc/: index.rst  osc_plugin_cli.rst
doc/source/osc/v1/: index.rst
moganclient/: __init__.py
moganclient/common/: base.py  exceptions.py  http.py  i18n.py  utils.py
moganclient/osc/: plugin.py
moganclient/osc/v1/: aggregate.py  availability_zone.py  flavor.py  keypair.py  manageable_server.py  manageable_servers.py  node.py  server.py  server_group.py
moganclient/tests/unit/: base.py  fakes.py
moganclient/tests/unit/common/: test_base.py  test_exceptions.py  test_http.py  test_utils.py
moganclient/tests/unit/osc/: test_plugin.py
moganclient/tests/unit/osc/v1/: test_aggregate.py  test_availability_zone.py  test_flavor.py  test_manageable_server.py  test_manageable_servers.py  test_node.py  test_server.py  test_server_group.py
moganclient/v1/: aggregate.py  availability_zone.py  client.py  flavor.py  keypair.py  manageable_server.py  manageable_servers.py  node.py  server.py  server_group.py
nimbleclient/: __init__.py  exceptions.py  i18n.py
nimbleclient/common/: base.py  exceptions.py  http.py  utils.py
nimbleclient/osc/: plugin.py
nimbleclient/osc/v1/: availability_zone.py  flavor.py  instance.py  instance_type.py  server.py
nimbleclient/tests/functional/: base.py
nimbleclient/tests/unit/: __init__.py  base.py  fakes.py  test_nimbleclient.py
nimbleclient/tests/unit/common/: test_base.py  test_exceptions.py  test_http.py  test_utils.py
nimbleclient/tests/unit/osc/: test_plugin.py
nimbleclient/tests/unit/osc/v1/: test_availability_zone.py  test_flavor.py  test_instance.py  test_instance_type.py  test_server.py
nimbleclient/v1/: availability_zone.py  client.py  flavor.py  instance.py  instance_type.py  server.py
releasenotes/notes/: support-manageable-servers-list-fc88f061cda5c2f4.yaml
releasenotes/source/: conf.py  index.rst
tools/: zun.bash_completion
