[metadata]
name = python-nimbleclient
summary = Python client library for OpenStack Nimble project.
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    nimbleclient

[entry_points]
openstack.cli.extension =
    baremetal_compute = nimbleclient.osc.plugin

openstack.baremetal_compute.v1 =
    baremetal_flavor_create = nimbleclient.osc.v1.flavor:CreateFlavor
    baremetal_flavor_delete = nimbleclient.osc.v1.flavor:DeleteFlavor
    baremetal_flavor_list = nimbleclient.osc.v1.flavor:ListFlavor
    baremetal_flavor_set = nimbleclient.osc.v1.flavor:SetFlavor
    baremetal_flavor_show = nimbleclient.osc.v1.flavor:ShowFlavor
    baremetal_flavor_unset = nimbleclient.osc.v1.flavor:UnsetFlavor
    baremetal_server_create = nimbleclient.osc.v1.server:CreateServer
    baremetal_server_delete = nimbleclient.osc.v1.server:DeleteServer
    baremetal_server_list = nimbleclient.osc.v1.server:ListServer
    baremetal_server_show = nimbleclient.osc.v1.server:ShowServer
    baremetal_server_power = nimbleclient.osc.v1.server:SetServerPowerState
    baremetal_server_update = nimbleclient.osc.v1.server:UpdateServer
    baremetal_availability_zone_list = nimbleclient.osc.v1.availability_zone:ListAvailabilityZone


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nimbleclient/locale
domain = nimbleclient

[update_catalog]
domain = nimbleclient
output_dir = nimbleclient/locale
input_file = nimbleclient/locale/nimbleclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nimbleclient/locale/nimbleclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
