[metadata]
name = python-moganclient
summary = Python client library for OpenStack Mogan project.
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    moganclient

[entry_points]
openstack.cli.extension =
    baremetal_compute = moganclient.osc.plugin

openstack.baremetal_compute.v1 =
    baremetalcompute_flavor_create = moganclient.osc.v1.flavor:CreateFlavor
    baremetalcompute_flavor_delete = moganclient.osc.v1.flavor:DeleteFlavor
    baremetalcompute_flavor_list = moganclient.osc.v1.flavor:ListFlavor
    baremetalcompute_flavor_set = moganclient.osc.v1.flavor:SetFlavor
    baremetalcompute_flavor_show = moganclient.osc.v1.flavor:ShowFlavor
    baremetalcompute_flavor_unset = moganclient.osc.v1.flavor:UnsetFlavor
    baremetalcompute_server_create = moganclient.osc.v1.server:CreateServer
    baremetalcompute_server_delete = moganclient.osc.v1.server:DeleteServer
    baremetalcompute_server_list = moganclient.osc.v1.server:ListServer
    baremetalcompute_server_lock = moganclient.osc.v1.server:LockServer
    baremetalcompute_server_show = moganclient.osc.v1.server:ShowServer
    baremetalcompute_server_start = moganclient.osc.v1.server:StartServer
    baremetalcompute_server_stop = moganclient.osc.v1.server:StopServer
    baremetalcompute_server_reboot = moganclient.osc.v1.server:RebootServer
    baremetalcompute_server_set = moganclient.osc.v1.server:SetServer
    baremetalcompute_server_unset = moganclient.osc.v1.server:UnsetServer
    baremetalcompute_server_unlock = moganclient.osc.v1.server:UnLockServer
    baremetalcompute_server_netinfo = moganclient.osc.v1.server:ShowServerNetworkInfo
    baremetalcompute_server_add_floating_ip = moganclient.osc.v1.server:AddFloatingIP
    baremetalcompute_server_remove_floating_ip = moganclient.osc.v1.server:RemoveFloatingIP
    baremetalcompute_server_add_port = moganclient.osc.v1.server:AddInterface
    baremetalcompute_server_remove_port = moganclient.osc.v1.server:RemoveInterface
    baremetalcompute_console_url_show = moganclient.osc.v1.server:ShowConsoleURL
    baremetalcompute_availability_zone_list = moganclient.osc.v1.availability_zone:ListAvailabilityZone
    baremetalcompute_keypair_create = moganclient.osc.v1.keypair:CreateKeyPair
    baremetalcompute_keypair_show = moganclient.osc.v1.keypair:ShowKeyPair
    baremetalcompute_keypair_list = moganclient.osc.v1.keypair:ListKeyPair
    baremetalcompute_keypair_delete = moganclient.osc.v1.keypair:DeleteKeyPair
    baremetalcompute_node_list = moganclient.osc.v1.node:ListNode
    baremetalcompute_aggregate_create = moganclient.osc.v1.aggregate:CreateAggregate
    baremetalcompute_aggregate_show = moganclient.osc.v1.aggregate:ShowAggregate
    baremetalcompute_aggregate_list = moganclient.osc.v1.aggregate:ListAggregate
    baremetalcompute_aggregate_delete = moganclient.osc.v1.aggregate:DeleteAggregate
    baremetalcompute_aggregate_set = moganclient.osc.v1.aggregate:SetAggregate
    baremetalcompute_aggregate_unset = moganclient.osc.v1.aggregate:UnsetAggregate
    baremetalcompute_server_group_create = moganclient.osc.v1.server_group:CreateServerGroup
    baremetalcompute_server_group_show = moganclient.osc.v1.server_group:ShowServerGroup
    baremetalcompute_server_group_list = moganclient.osc.v1.server_group:ListServerGroup
    baremetalcompute_server_group_delete = moganclient.osc.v1.server_group:DeleteServerGroup
    baremetalcompute_aggregate_add_node = moganclient.osc.v1.aggregate:AggregateAddNode
    baremetalcompute_aggregate_list_node = moganclient.osc.v1.aggregate:AggregateListNode
    baremetalcompute_aggregate_remove_node = moganclient.osc.v1.aggregate:AggregateRemoveNode
    baremetalcompute_manageable_server_list = moganclient.osc.v1.manageable_server:ListManageableServer
    baremetalcompute_server_manage = moganclient.osc.v1.manageable_server:ManageServer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = moganclient/locale
domain = moganclient

[update_catalog]
domain = moganclient
output_dir = moganclient/locale
input_file = moganclient/locale/moganclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = moganclient/locale/moganclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
